# Safeops360-backend

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  MIGRATION.md  README.md  alembic.ini  home.html  nixpacks.toml  pyproject.toml  qa_bcm_deep.py  qa_bcm_smoke.py  qa_cams.py  qa_erm_advanced.py  qa_t3.py  requirements.txt  seed_capa_treatments.py  seed_culture_demo_data.py  seed_demo_brief.py  seed_erm_advanced.py  seed_fire_safety.py  seed_rca.py  seed_remediation_demo.py  verify_rca.py
alembic/: env.py
app/: main.py
scripts/: add_audit_lifecycle_v2.py  add_audit_multi_auditor.py  add_audit_pagination_index.py  add_ptw_ppe_gate_columns.py  add_template_custom_checkpoints.py  check_incident_scope.py  create_admin.py  create_attachment_tables.py  create_audit_tables.py  create_doc_control_tables.py  create_erm_gap_tables.py  create_insight_snapshot_table.py  create_licensing_tables.py  create_oos_tables.py  create_pharma_tables.py  create_ppe_tables.py  debug_hira_entry.py  elevate_hse_manager_rbac.py  enable_eai_flag.py  fix_ptw_dropdowns_data.py  grant_audit_compliance_auditees.py  grant_hse_manager_cross_plant.py  licence_authority.py  link_competencies_to_training.py  qa_ppe_gate_phase1.py  qa_ppe_gate_phase2.py  qa_ppe_gate_phase3.py  qa_ppe_module_full.py  seed_audit_lifecycle_v2.py  seed_audit_rbac.py  seed_audit_scale_demo.py  seed_backing_training_certs.py  seed_deviation_capa_source.py  seed_doc_control_rbac.py  seed_eai_review_cycles.py  seed_erm_business_units.py  seed_oos_rbac.py  seed_pharma_rbac.py  seed_ppe.py  seed_ppe_rbac.py  (+17 more)
(+351 files in other folders)
