[project]
name = "safeops360-backend"
version = "1.0.0"
description = "SafeOps360 — Python backend (FastAPI + SQLAlchemy 2.0 async) talking to Supabase Postgres."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<4.1",  # passlib 1.7.x reads bcrypt.__about__ which was removed in 4.1+
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "supabase>=2.6.0",
  "python-dotenv>=1.0.1",
  "email-validator>=2.2.0",
  "anthropic>=0.40.0",
  "fpdf2>=2.7.0",       # ERM report PDF export (§10f)
  "openpyxl>=3.1.0"     # ERM report Excel (.xlsx) export (§10f)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
